# django-amplitude

./: README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: test.yaml
amplitude/: __init__.py  amplitude.py  middleware.py  settings.py  utils.py
tests/: fixtures.py  settings.py  test_amplitude.py  test_middleware.py  test_settings.py  test_utils.py  urls.py
