[tool.poetry]
name = "django-amplitude"
packages = [
    {include = "amplitude"}
]
version = "0.2.0"
description = "Integration between Django and Amplitude"
authors = ["Matt Pye <pyematt@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/pyepye/django-amplitude"
homepage = "https://github.com/pyepye/django-amplitude"
keywords = ["amplitude", "analytics", "product analytics", "saas"]


[tool.poetry.dependencies]
python = "^3.6"
Django = ">=2.1"
httpx = "^0.13.2"
user-agents = "^2.1"


[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-cov = "^2.9.0"
pytest-mock = "^3.1.0"
pytest-django = "^3.9.0"
pytest-freezegun = "^0.4.1"
isort = {extras = ["pyproject"], version = "^4.3.21"}
flake8 = "^3.8.2"
tox = "^3.15.1"
django-stubs = "^1.5.0"


[tool.isort]
line_length = 79
multi_line_output = 5
known_third_party = "pytest"
known_first_party = "amplitude"
skip_glob = "__pycache__/*,venv/*,.venv/*,.tox/*,.mypy_cache"
not_skip = "__init__.py"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
