[tool.poetry]
name = "django-amplitude"
packages = [
    {include = "amplitude"}
]
version = "0.8.0"
description = "Integration between Django and Amplitude"
authors = ["Matt Pye <pyematt@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/pyepye/django-amplitude"
homepage = "https://github.com/pyepye/django-amplitude"
keywords = ["amplitude", "analytics", "product analytics", "saas"]


[tool.poetry.dependencies]
python = "^3.6"
Django = ">=2.1"
httpx = ">=0.13.2"
user-agents = ">=2.1"


[tool.poetry.dev-dependencies]
django-stubs = "^1.5.0"
flake8 = "^4.0.1"
isort = {extras = ["pyproject"], version = "^5.2.0"}
pytest = "^7.0.1"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
pytest-freezegun = "^0.4.1"
pytest-mock = "^3.1.0"
tox = "^3.28.0"


[tool.isort]
line_length = 79
multi_line_output = 5
known_third_party = "pytest"
known_first_party = "amplitude"
skip_glob = "__pycache__/*,venv/*,.venv/*,.tox/*,.mypy_cache"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
